ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.4.0-rc0, 4.7.0
    • Affects Version/s: None
    • Component/s: Internal Code
    • None
    • Fully Compatible
    • ALL
    • v4.4
    • Sharding 2020-03-09, Sharding 2020-03-23
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      aggregate and mapReduce commands can have an "out" stage that does writes. Hedging these commands could lead to unexpected behaviors since all writes need to be routed to the primary (i.e. writes will be executed more than once). As such, we need to disallow hedging for aggregate, mapReduce and all other commands can potentially do writes. 

            Assignee:
            Cheahuychou Mao
            Reporter:
            Cheahuychou Mao
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: