SERVER-46646 Disallow hedging for commands that can potentially do writes

(cherry picked from commit dc895c373b8e48113ce7505595b05011dd02f6e4)